    (a representation of the Python call).

  - Fix the Install() method so that, like other actions, it prints
    what would have happened when the -n option is used.

  - Don't create duplicate source files in a BuildDir when the -n
    option is used.

  - Refactor the Scanner interface to eliminate unnecessary Scanner
    calls and make it easier to write efficient scanners.

  - Significant performance improvement from using a more efficient
    check, throughout the code, for whether a Node has a Builder.

  - Fix specifying only the source file to MultiStepBuilders such as
    the Program Builder.  (Bug reported by Dean Bair.)

  - Fix an exception when building from a file with the same basename as
    the subdirectory in which it lives.  (Bug reported by Gerard Patel.)

  - Fix automatic deduction of a target file name when there are
    multiple source files specified; the target is now deduced from just
    the first source file in the list.

  - Documentation fixes: better initial explanation of SConscript files;
    fix a misformatted "table" in the StaticObject explanation.

  From Steve Leblanc:

  - Add a Clean() method to support removing user-specified targets
    when using the -c option.

  From Lachlan O'Dea:

  - Make the Environment.get() method return None by default.

  From Anthony Roach:

  - Add SetJobs() and GetJobs() methods to allow configuration of the
    number of default jobs (still overridden by -j).

  - Convert the .sconsign file format from ASCII to a pickled Python
    data structure.

  - Error message cleanups:  Made consistent the format of error
    messages (now all start with "scons: ***") and warning messages (now
    all start with "scons: warning:").  Caught more cases with the "Do
    not know how to build" error message.

  - Added support for the MinGW tool chain.



RELEASE 0.09 - Thu,  5 Dec 2002 04:48:25 -0600

  From Chad Austin:

  - Add a Prepend() method to Environments, to append values to